﻿i-MSCP ChangeLog

------------------------------------------------------------------------------------------------------------------------
Git 1.2.x
------------------------------------------------------------------------------------------------------------------------

BACKEND
	Fixed: Could not remove service (wrong return value)
	Fixed: Missing variable in sprintf statement (iMSCP::Dir)
	Fixed: Optionnal options must be passed-in to onLoadTemplate listeners (httpd server impls.)

CONFIG
	Removed: ProxyErrorOverride parameter which was introduced in version 1.2.10 (Unexpected 503 errors +++)

PLUGINS
	Updated: API version to 1.0.1

------------------------------------------------------------------------------------------------------------------------
1.2.10
------------------------------------------------------------------------------------------------------------------------

2015-12-27: Laurent Declercq
	RELEASE i-MSCP 1.2.10

FRONTEND
	Fixed: 404 error on user statistics page (reseller level)
	Fixed: Wrong issue tracker links in admin/database_update.php

BACKEND
	Fixed: Could not restore domain (undefined variable)
	Fixed: Missing parameter for onLoadTemplate event (imscp.cnf)

YOUTRACK
	#IP-1386 Length of password generator is hardcoded
	#IP-1388 phptmp removed on client update
	#IP-1391 imscp_panel service can fail to start/restart when the APCU PHP extension is installed
	#IP-1393 Unable to disable backup feature for existing domains
	#IP-1394 httpd-logs-mngr starts before mysql.server started
	#IP-1396 Deletion of a subdomain which has '/' as mount point deletes all web folders
	#IP-1401 Courier pop3-ssl and imap-ssl don't work with Windows 10
	#IP-1406 File not found - false error template
	#IP-1417 When changing hostname using the panel_hostname reconfiguration option, The SSL dialog should be triggered
	#IP-1452 pTemplate - reset static variable $_root_dir in /client/cert_view.php
